--- a/src/DogInterface/Message/Message.css
+++ b/src/DogInterface/Message/Message.css
@@ -18,12 +18,12 @@
     text-align: center;
     width: 90%;
     background-color: white;
+    overflow: hidden;
 }
 
 #header{
     font-size: 6vw;
 }
-
-#header{
-    font-size: 6vw;
+#message{
+    font-size: 3vw;
 }
